src/components/faq/_styles.css
.faq {
  margin-top: -200px;
}

.faq__content {
  background-color: white;
  padding: 40px 65px;
  max-width: 620px;
  width: 70%;
}

.faq__header {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: calc(100% - var(--nav-height-desktop));
  padding-bottom: 35px;

  @media (max-width: 620px) {
    padding-bottom: 20px;
  }
}

.faq__header-title {
  margin: 0;
  font-size: 80px;
  text-transform: uppercase;
  font-weight: 800;

  @media (max-width: 620px) {
    font-size: 32px;
    margin-top: 10px;
  }
}

.faq__header-description {
  max-width: var(--max-width);
  margin-top: 30px;
  font-size: 24px;
  font-weight: 700;

  @media (max-width: 620px) {
    display: none;
  }
}

.faq__content {
  font-family: Montserrat;
  color: #000000;
  font-size: 15px;
  text-decoration: none solid rgb(0, 0, 0);
  line-height: 28px;

  h1 {
    font-size: 36px;
    font-weight: 800;
  }

  span {
    line-height: 18px;
  }

  p,
  ol {
    padding-bottom: 35px;
  }
}

.faq__call {
  margin-top: 50px;
  font-weight: 800;
  font-family: Montserrat;
  color: var(--bigstone);
  font-size: 28px;
  text-decoration: none solid rgb(0, 0, 0);
  line-height: 28px;

  span {
    font-size: 28px;
    line-height: 28px;
  }

  span:hover::before {
    height: 20px;
  }
}

